tests/diagnostics/declarations/types/unknown_field_type/expect.txt
# exit: 1
input/main.coppice:2:9: error: unknown type 'foo'
      id: foo,
          ^
